# ownevo_app

./: .dockerignore  .env.example  .env.hybrid.example  .env.local-lms.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  TODOS.md  docker-compose.yml  fly.toml  pyproject.toml
apps/kernel/: Dockerfile  README.md  pyproject.toml
apps/kernel/baselines/: __init__.py
apps/kernel/baselines/labour_v1/: skill.py
apps/kernel/baselines/m5_lightgbm/: __init__.py
apps/kernel/baselines/m5_lightgbm/skill_v1/: __init__.py  data_loader.py  ensemble.py  feature_engineer.py  model_trainer.py  outlier_handler.py  predictor.py
apps/kernel/baselines/m5_lightgbm/skill_v2/: __init__.py  data_loader.py  ensemble.py  feature_engineer.py  model_trainer.py  outlier_handler.py  predictor.py
apps/kernel/baselines/tau3_retail_v1/: README.md  __init__.py  agent.py
apps/kernel/docs/: local-model-testing.md
apps/kernel/migrations/: 0001_substrate.sql  0002_failure_cluster_fingerprint.sql  0003_skills_latest_proposed.sql  0004_skills_deployed.sql  0005_workflow_sim_metric.sql  0006_workflow_kind.sql  0007_workflow_mode_eval_modes.sql  0008_iteration_case_outputs.sql  0009_audit_hash_chain.sql  0010_grants_and_constraints.sql  0011_workflow_template_id.sql  0012_design_agent_log.sql  0013_case_output_payload.sql  0014_workflow_agent_model.sql  0015_changes_requested.sql  0015_changes_requested_enums.sql  0015b_changes_requested_constraint.sql  0016_demo_phase1.sql  0017_proposal_kind.sql  0018_traces_ingest_source.sql  0018b_traces_ingest_source_online.sql  0019_receiver_tokens.sql  0020_mock_sim_tier.sql  0021_audit_fix_shipped_langsmith.sql  0021_replay_sim_tier.sql  0022_langsmith_integration.sql  0023_audit_fix_shipped_langsmith.sql  0024_audit_ship_langsmith_unique.sql  0025_design_agent_import_log.sql  0026_audit_fix_exported_copilot_studio.sql  0026_workspace_substrate.sql  0027_audit_ship_copilot_studio_unique.sql  0028_agent_registry.sql  0028_audit_eval_cases_pushed_copilot_studio.sql  0028_data_uploads.sql  0029_mcp_servers.sql  0030_mcp_oauth.sql  0031_data_uploads.sql  0032_triggers.sql  0033_workspace_substrate.sql  (+11 more)
apps/kernel/sandbox/: Dockerfile.m5  Dockerfile.tau3  tau2_patches.py
apps/kernel/scripts/: README.md  _sweep_parse_log.py  boot.py  cluster_label_eval.py  cluster_m5_failures.py  cluster_nl_gen_failures.py  demo_admin.py  eval_replay.py  judge_eval.py  llm_judge_approver_eval.py  m5_agent_prompt.md  m5_baseline.py  m5_replay_30day.py  m5_replay_7day.py  m5_replay_bootstrap.py  meta_eval.py  migrate.py  mint_demo_invite.py  mint_receiver_token.py  nl_gen_demo_loop.py  nl_gen_smoketest.py  probe_anthropic_models.py  probe_skill_quality.py  probe_tool_calling.py  regen_nl_gen_schemas.py  revert_skill.py  run_a4_4_local_smoke.sh  run_improvement_loop.py  run_lmstudio_sweep.sh  run_nl_gen_smoke.sh  run_ollama_sweep.sh  run_tau3_loop.py  seed_approval_demo.py  seed_demo.py  seed_m5_baseline.py  sim_mock_smoketest.py  sim_replay_smoketest.py  sweep_candidates_full.txt  sweep_candidates_smoke.txt  sweep_probes.py  (+11 more)
apps/kernel/src/ownevo_kernel/: __init__.py  db.py  iteration_runner.py  sim_tier.py  tenant_session.py  types.py
apps/kernel/src/ownevo_kernel/agent_tools/: __init__.py  metrics.py  run_pipeline.py  skills.py
apps/kernel/src/ownevo_kernel/agents/: __init__.py  models.py  registry.py
apps/kernel/src/ownevo_kernel/api/: __init__.py  _anthropic_client.py  _copilot_studio_credentials.py  _demo_budget.py  _demo_gate.py  _demo_identity.py  _demo_quota.py  _demo_token_accountant.py  _error_handler.py  _graceful_shutdown.py  _integration_credentials.py  _internal_auth.py  _logging.py  _metrics.py  _request_id.py  _sentry.py  _signing.py  _workspace_invites.py  app.py  deps.py  jsonb.py  models.py
apps/kernel/src/ownevo_kernel/approvals/: __init__.py  apply.py  deploy.py  service.py
apps/kernel/src/ownevo_kernel/approvers/: __init__.py  eval_set.py  judgment.py  llm_judge.py  runner.py
apps/kernel/src/ownevo_kernel/audit/: __init__.py  writer.py
apps/kernel/src/ownevo_kernel/benchmark/: __init__.py  labour.py  m5.py  m5_failure_analyzer.py  m5_sandbox.py  synthetic.py  types.py
apps/kernel/src/ownevo_kernel/clustering/: __init__.py  auto_trigger.py  default_impl.py  from_traces.py  persistence.py  pipeline.py  quality.py  types.py
apps/kernel/src/ownevo_kernel/data_ingest/: __init__.py  documents.py  ingest.py  models.py  spreadsheet.py  store.py
apps/kernel/src/ownevo_kernel/datasets/: __init__.py  m5.py  m5_metric.py
apps/kernel/tests/: conftest.py  test_agent_tools_metrics.py  test_agent_tools_run_pipeline.py  test_agent_tools_skills.py  test_agents_registry.py  test_api_agents.py  test_api_audit.py  test_api_auth.py  test_api_cluster_production_failures.py  test_api_design_agent_ambiguity_report.py  test_api_design_agent_description_conflicts.py  test_api_design_agent_import.py  test_api_design_agent_next_question.py  test_api_gate_result_cases.py  test_api_health_metrics.py  test_api_integrations.py  test_api_internal_auth.py  test_api_internal_invites.py  test_api_internal_workspaces.py  test_api_jobs.py  test_api_mcp.py  test_api_mcp_oauth.py  test_api_nl_gen_preview.py  test_api_nl_gen_template_id.py  test_api_proposals.py  test_api_proposals_deploy.py  test_api_push_eval_cases_copilot_studio.py  test_api_ship_copilot_studio.py  test_api_ship_langsmith.py  test_api_skills.py  test_api_traces.py  test_api_uploads.py  test_api_workflow_agent_model.py  test_api_workflows.py  test_api_workflows_design_agent_log.py  test_api_workflows_try.py  test_apply_sim_invariant.py  test_approvals.py  test_approvals_deploy.py  test_approvers_eval_set.py  (+153 more)
apps/kernel/tests/data_ingest/: test_documents.py  test_read_upload_dispatch.py  test_spreadsheet.py  test_store.py
apps/kernel/tests/gate_self_test/: test_gate_self_test.py
apps/kernel/tests/mcp_client/: test_auth.py  test_client.py  test_dispatch.py  test_oauth.py  test_registry.py
apps/kernel/tests/state_machines/: test_proposal_states.py
(+508 files in other folders)
