[project]
name = "ownevo"
version = "0.0.0"
description = "ownEvo — institutional knowledge layer for AI agents (workspace root)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "apps/kernel",
    "packages/trace-format",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
