[project]
name = "ownevo"
version = "0.0.0"
description = "ownEvo — institutional knowledge layer for AI agents (workspace root)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "apps/kernel",
    "packages/trace-format",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ownevo-kernel[agent,baselines-m5,api,test,triggers,otel-emit]",
    "ownevo-trace-format",
]

[tool.uv.sources]
ownevo-kernel = { workspace = true }
ownevo-trace-format = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["apps/kernel/tests", "packages/trace-format/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
