[project]
name = "ownevo-kernel"
version = "0.1.0"
description = "ownEvo kernel — Python improvement loop (sandbox, gate, clustering, NL-gen, audit)"
requires-python = ">=3.11"
dependencies = [
    "ownevo-trace-format",
    "pydantic>=2.7,<3",
    "asyncpg>=0.29",
    "pyyaml>=6",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Deps for the M5 LightGBM baseline under `apps/kernel/baselines/m5_lightgbm/`.
# Kept out of the runtime kernel install (per CLAUDE.md "kernel stays
# pandas-free"); production sandbox image bakes them in via the runtime
# Dockerfile in PR #11c.
baselines-m5 = [
    "lightgbm>=4.3,<5",
    "pandas>=2.2,<3",
]
# Claude Agent SDK middleware (W2.1 follow-on). Optional so kernel
# unit tests + the M5 sandboxed path don't need a network-capable
# install. The W4 agent-loop entrypoint uses `pip install ownevo-kernel[agent]`.
agent = [
    "anthropic>=0.95,<1",
    "openai>=1.30,<2",
]
# REST API service for the W2.5 approval queue UI. Optional so the
# kernel library install stays HTTP-server-free; only the API process
# needs uvicorn/fastapi at runtime.
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "httpx>=0.27,<1",  # used by the FastAPI test client + integration tests
]
# Inspect AI Task adapter (A4.3). Optional because the load-bearing
# `make eval-replay` path uses `eval_runner.run_replay`, which is
# pure stdlib + numpy. Install when an agent gets wired through
# `inspect_ai.eval()` in A5+.
eval = [
    "inspect-ai>=0.3,<1",
]

[tool.uv.sources]
ownevo-trace-format = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ownevo_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
