[project]
name = "ownevo-kernel"
version = "0.1.0"
description = "ownEvo kernel — Python improvement loop (sandbox, gate, clustering, NL-gen, audit)"
requires-python = ">=3.11"
dependencies = [
    "ownevo-trace-format",
    "pydantic>=2.7,<3",
    "asyncpg>=0.29",
    "pyyaml>=6",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Deps for the M5 LightGBM baseline under `apps/kernel/baselines/m5_lightgbm/`.
# Kept out of the runtime kernel install (per CLAUDE.md "kernel stays
# pandas-free"); production sandbox image bakes them in via the runtime
# Dockerfile in PR #11c.
baselines-m5 = [
    "lightgbm>=4.3,<5",
    "pandas>=2.2,<3",
]
# Claude Agent SDK middleware (W2.1 follow-on). Optional so kernel
# unit tests + the M5 sandboxed path don't need a network-capable
# install. The W4 agent-loop entrypoint uses `pip install ownevo-kernel[agent]`.
agent = [
    "anthropic>=0.95,<1",
    "openai>=1.30,<2",
]
# REST API service for the W2.5 approval queue UI. Optional so the
# kernel library install stays HTTP-server-free; only the API process
# needs uvicorn/fastapi at runtime.
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "httpx>=0.27,<1",  # used by the FastAPI test client + integration tests
    # OTLP protobuf ingest on POST /api/otel/v1/traces. OpenLLMetry /
    # traceloop and most OTel SDKs emit OTLP-HTTP protobuf by default;
    # this package carries the generated message definitions used to
    # decode the body before reusing the JSON-path mapper.
    "opentelemetry-proto>=1.20,<2",
    # Encryption-at-rest for third-party integration credentials
    # (e.g. the LangSmith API key) via Fernet. See secrets/encrypted_field.py.
    "cryptography>=42,<46",
]
# Inspect AI Task adapter (A4.3). Optional because the load-bearing
# `make eval-replay` path uses `eval_runner.run_replay`, which is
# pure stdlib + numpy. Install when an agent gets wired through
# `inspect_ai.eval()` in A5+.
eval = [
    "inspect-ai>=0.3.217,<0.4",
]
# Failure-clustering pipeline (B3.2). Optional because the kernel core
# stays free of these heavy deps; only `scripts/cluster_m5_failures.py`
# and `clustering.default_impl` need them at runtime. Unit tests stub
# the Embedder/Reducer/Clusterer/Labeler Protocols and don't pull
# these in.
clustering = [
    "sentence-transformers>=2.7,<4",
    "umap-learn>=0.5,<0.6",
    "hdbscan>=0.8.33,<0.9",
]
# OpenLLMetry / traceloop SDK, used ONLY by the OTLP-receiver
# integration test (tests/middleware/otel_receiver/test_openllmetry_*).
# Heavy (~30 transitive OpenTelemetry instrumentation packages), so it
# is opt-in: the test skips when traceloop isn't importable, and CI
# installs this extra for the integration job only.
otel-integration = [
    "traceloop-sdk>=0.30,<1",
]
# LangSmith fix-delivery (13.0.2). The push adapter wraps the langsmith
# SDK's push_prompt; langchain-core supplies the ChatPromptTemplate the
# API expects as the pushed object. Optional so the core kernel install
# stays free of the LangChain tree; the API process installs it when the
# LangSmith integration is enabled.
langsmith = [
    "langsmith>=0.8,<1",
    "langchain-core>=0.3,<1",
]
# Note: τ³-bench (Sierra tau2-bench) is NOT exposed as a kernel extra.
# Same pattern as `baselines-m5`: deps live in the sandbox image
# (`apps/kernel/sandbox/Dockerfile.tau3`), not in the host install.
# `SandboxedTauBenchRunner` marshals fold args via stdin/stdout, so
# kernel-side code doesn't import tau2 directly. Reasons:
#   - tau2 requires Python 3.12-3.13; kernel is 3.11+
#   - tau2 → litellm → openai==2.x conflicts with the [agent] extra's <2 cap
# Both addressable inside the sandbox image where Python and dep
# versions are pinned.

[tool.uv.sources]
ownevo-trace-format = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ownevo_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
