[project]
name = "ownevo-kernel"
version = "0.1.0"
description = "ownEvo kernel — Python improvement loop (sandbox, gate, clustering, NL-gen, audit)"
requires-python = ">=3.11"
dependencies = [
    "ownevo-trace-format",
    "pydantic>=2.7,<3",
    "asyncpg>=0.29",
    "pyyaml>=6",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Deps for the M5 LightGBM baseline under `apps/kernel/baselines/m5_lightgbm/`.
# Kept out of the runtime kernel install (per CLAUDE.md "kernel stays
# pandas-free"); production sandbox image bakes them in via the runtime
# Dockerfile in PR #11c.
baselines-m5 = [
    "lightgbm>=4.3,<5",
    "pandas>=2.2,<3",
]
# Claude Agent SDK middleware (W2.1 follow-on). Optional so kernel
# unit tests + the M5 sandboxed path don't need a network-capable
# install. The W4 agent-loop entrypoint uses `pip install ownevo-kernel[agent]`.
agent = [
    "anthropic>=0.95,<1",
    "openai>=1.30,<2",
]
# REST API service for the W2.5 approval queue UI. Optional so the
# kernel library install stays HTTP-server-free; only the API process
# needs uvicorn/fastapi at runtime.
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "httpx>=0.27,<1",  # used by the FastAPI test client + integration tests
    # OTLP protobuf ingest on POST /api/otel/v1/traces. OpenLLMetry /
    # traceloop and most OTel SDKs emit OTLP-HTTP protobuf by default;
    # this package carries the generated message definitions used to
    # decode the body before reusing the JSON-path mapper.
    "opentelemetry-proto>=1.20,<2",
    # Encryption-at-rest for third-party integration credentials
    # (e.g. the LangSmith API key) via Fernet. See secrets/encrypted_field.py.
    "cryptography>=42,<46",
    # Multipart parsing for file uploads (POST /api/uploads). Small + pure
    # Python; kept in the API extra so the upload route works wherever the
    # API runs. The heavy parsing libs live in the `data-ingest` extra below.
    "python-multipart>=0.0.9,<0.1",
    # Error reporting. The kernel calls `sentry_sdk.init(...)` only when
    # `SENTRY_DSN` is set, so dev/CI installs are silent; the FastAPI
    # integration is pulled in via the `[fastapi]` extra so middleware
    # wiring happens at init time without us touching the request path.
    "sentry-sdk[fastapi]>=2.18,<3",
]
# Direct-upload ingestion (Track 17.0.3 / 17.0.4): parse spreadsheets and
# documents into the parsed form the agent reads. Heavy + optional so the
# kernel core stays pandas-free (per the repo convention); the parsers
# lazy-import these, and the API process that serves uploads installs the
# extra. openpyxl backs pandas' xlsx reader.
#
# Parquet needs a pandas parquet engine (pyarrow or fastparquet). It is NOT
# pinned here because pyarrow has no wheels on the newest CPython yet and
# building it from source needs a toolchain; install one separately where
# parquet support is required (`pip install pyarrow`, Python <=3.13). The
# spreadsheet parser surfaces a clear error if no engine is present.
data-ingest = [
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "pypdf>=4,<6",
    "python-docx>=1.1,<2",
]
# MCP-client framework (Track 17.0). Optional because the kernel core,
# the auth/registry logic, and the unit tests all run against a fake
# transport and never import the SDK; only a process that actually talks
# to a live MCP server needs the official client installed.
mcp = [
    "mcp>=1.2,<2",
]
# Inspect AI Task adapter (A4.3). Optional because the load-bearing
# `make eval-replay` path uses `eval_runner.run_replay`, which is
# pure stdlib + numpy. Install when an agent gets wired through
# `inspect_ai.eval()` in A5+.
eval = [
    "inspect-ai>=0.3.217,<0.4",
]
# Google Agent Development Kit adapter (Track 9.0.4). Optional because
# ADK pulls in `google-genai` + the OpenTelemetry SDK and is only needed
# when running the live integration test that drives a real Gemini call
# end-to-end through the OTel ingest path. Unit tests for the ADK→semconv
# translator stub the OTLP-JSON payload and don't need this extra.
adk = [
    "google-adk>=2.1,<3",
    "opentelemetry-sdk>=1.36,<2",
]
# Failure-clustering pipeline (B3.2). Optional because the kernel core
# stays free of these heavy deps; only `scripts/cluster_m5_failures.py`
# and `clustering.default_impl` need them at runtime. Unit tests stub
# the Embedder/Reducer/Clusterer/Labeler Protocols and don't pull
# these in.
clustering = [
    "sentence-transformers>=2.7,<4",
    "umap-learn>=0.5,<0.6",
    "hdbscan>=0.8.33,<0.9",
]
# OpenLLMetry / traceloop SDK, used ONLY by the OTLP-receiver
# integration test (tests/middleware/otel_receiver/test_openllmetry_*).
# Heavy (~30 transitive OpenTelemetry instrumentation packages), so it
# is opt-in: the test skips when traceloop isn't importable, and CI
# installs this extra for the integration job only.
otel-integration = [
    "traceloop-sdk>=0.30,<1",
]
# LangSmith fix-delivery adapter. The push adapter wraps the langsmith
# SDK's push_prompt; langchain-core supplies the ChatPromptTemplate the
# API expects as the pushed object. Optional so the core kernel install
# stays free of the LangChain tree; the API process installs it when the
# LangSmith integration is enabled.
langsmith = [
    "langsmith>=0.8,<1",
    "langchain-core>=0.3,<1",
]
# Generic event-trigger framework (Track 17.1). croniter parses cron
# expressions; only the cron trigger kind needs it. The other trigger kinds
# (webhook, threshold, Slack, email, calendar) have no extra deps beyond the
# kernel core (Slack/email/calendar rely on the `mcp` extra for MCP calls).
triggers = [
    "croniter>=3.0,<4",
]
# OTel emitter — emit ownEvo analysis events as OTLP spans to any OTLP
# backend (Datadog, Honeycomb, Jaeger, etc.). Optional so the kernel core
# stays SDK-free; the emitter becomes a no-op when this extra is absent.
# `opentelemetry-exporter-otlp-proto-http` is needed for OTLP-HTTP export
# (the most widely supported format). The base SDK is already pulled in by
# the `adk` extra; keeping it separate means the emitter can be enabled
# without pulling in google-adk.
otel-emit = [
    "opentelemetry-sdk>=1.36,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.36,<2",
]
# Note: τ³-bench (Sierra tau2-bench) is NOT exposed as a kernel extra.
# Same pattern as `baselines-m5`: deps live in the sandbox image
# (`apps/kernel/sandbox/Dockerfile.tau3`), not in the host install.
# `SandboxedTauBenchRunner` marshals fold args via stdin/stdout, so
# kernel-side code doesn't import tau2 directly. Reasons:
#   - tau2 requires Python 3.12-3.13; kernel is 3.11+
#   - tau2 → litellm → openai==2.x conflicts with the [agent] extra's <2 cap
# Both addressable inside the sandbox image where Python and dep
# versions are pinned.

[tool.uv.sources]
ownevo-trace-format = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ownevo_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
